--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,16 @@
 {
-    "development": {
-      "username": "your_db_user",
-      "password": "your_db_password",
-      "database": "your_db_name",
-      "host": "your_db_host",
-      "dialect": "mysql"
-    },
-    "test": {
-      "username": "your_db_user",
-      "password": "your_db_password",
-      "database": "your_db_name",
-      "host": "your_db_host",
-      "dialect": "mysql"
-    },
-    "production": {
-      "use_env_variable": "JAWSDB_URL",
-      "dialect": "mysql"
-    }
+  "development": {
+    "username": "root",
+    "password": "root",
+    "database": "tech_blog",
+    "host": "127.0.0.1",
+    "dialect": "mysql",
+    "port": 3306
+  },
+  "production": {
+    "use_env_variable": "JAWSDB_URL",
+    "dialect": "mysql"
   }
+}
+
   
