--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
     "database": "tech_blog",
     "host": "127.0.0.1",
     "dialect": "mysql",
-    "port": 3306
+    "port": "3306"
   },
   "production": {
     "use_env_variable": "JAWSDB_URL",
